cleaned formatting, fixed iboutlets

--- a/Life on Mars/Life on Mars/Base.lproj/LaunchScreen.storyboard
+++ b/Life on Mars/Life on Mars/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-sunrise.jpg" highlightedImage="star field" translatesAutoresizingMaskIntoConstraints="NO" id="FFZ-kb-ecw">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-sunrise" translatesAutoresizingMaskIntoConstraints="NO" id="FFZ-kb-ecw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Life on Mars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9km-8z-uEu">
@@ -50,7 +50,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="space-sunrise.jpg" width="2560" height="1600"/>
-        <image name="star field" width="2000" height="1200"/>
+        <image name="space-sunrise" width="2560" height="1600"/>
     </resources>
 </document>
